xx/xx/2007  *** v2.10 ***

            Updated details for World Heroes (NeoRAGEx) to match MAME v0.120.


09/09/2007  *** v2.9 ***

            Updated ROM names for R-Type (Japan prototype) to match MAME v0.112
            Updates after MAME v0.118:
            - Removed some old fixes for rtypejp (no longer required).
            - Added rtypeus and rtypejp fixes for JunoFirst, M72 and RAGE.
            - Now incorporates MAME ROM renames for salamand and altbeas4.

17/10/2006  *** v2.8 ***

            Removed RAINE ROMs since they are now MAME compatible (v0.43.4+)
	    Updated internal ROM names to match MAME v0.109

05/10/2005  *** v2.7 ***

            Removed M1 ROMs since they are now MAME compatible (from v0.7.6)
            Removed Nebula ROMs since they are now MAME compatible (from v2.25)
            Added support for invaders.rom for SIDE

28/03/2005  *** v2.6 ***

            Updated altbeast ROMs (Calice and System16) to match MAME v0.95.

28/02/2005  *** v2.5 ***

            Internal game renames for Altered Beast (to match MAME v0.92).
            Internal ROM renames for a few CPS-2 games (to match MAME v0.92).
            Fixed a bug that caused the -l option to crash when listing ROMs.

30/01/2005  *** v2.4 ***

            Removed FBA v0.2.94.98 from the source (superceded by v0.2.95.22).
            Added von2 (MAME v0.91) for Nebula Jukebox v2.9 and M1 v0.7.5a3.

06/01/2005  *** v2.3 ***

            Removed ZiNc v0.9 from the source (superceded by v1.0.2).
            Removed WinKawaks v1.49 from the source (superceded by v1.52).
            Internal renames of tnzs and clone ROMs to match MAME v0.90.
            Added an extra option for the benefit of CAESAR.

26/10/2004  *** v2.2 ***

            Added Dynasty Wars support for various emus following MAME v0.87.

10/09/2004  *** v2.1 ***

            Removed the Snow Bros conversions for RAINE (now uses MAME ROMs).

02/07/2004  *** v2.0 ***
